# czirepairjpgxr-libczi

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
Src/: CMakeLists.txt
Src/JxrDecode/: JxrDecode.cpp  JxrDecode.h
Src/czirepair/: CMakeLists.txt  commandlineoptions.cpp  commandlineoptions.h  czirepair.cpp  platform_defines.h  repairutilities.cpp  repairutilities.h  utilities.cpp  utilities.h
Src/libCZI/: CziParse.cpp  CziParse.h  CziSubBlock.cpp  CziSubBlock.h  libCZI.h
